[package]
name = "latex-thebib"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Clean and sort legacy latex bibliographies written using 'thebibliography', Francesco Alemanno (2022)"
repository = "https://github.com/francescoalemanno/latex-thebib/tree/master"

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
regex = "1.7.0"
