[package]
name = "latex-thebib"
version = "0.3.4"
edition = "2021"
license = "MIT"
description = "Clean and sort legacy TeX bibliographies written using 'thebibliography' via the `refactor` sub-command. Compile BibTeX files to legacy `thebibliography` TeX code using the `compile` sub-command. Francesco Alemanno (2022)"
repository = "https://github.com/francescoalemanno/latex-thebib/tree/master"

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
regex = "1.7.0"
